<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AA生活记账</string>
    <string name="app_version">3.2.2</string>
    <string name="app_description">爱生活，爱记账，AA生活记账。具有每日消费、每月消费、消费分类排行、消费次数排行、消费单价排行、消费日期排行、趣味统计排行；消费比较分析、消费推荐分析、消费搜索分析；智能添加消费、固定添加消费、语音添加消费等实用功能。</string>
    <string name="app_welcome">爱生活，爱记账</string>
    <string name="action_abouts">关于</string>
    <string name="action_settings">设置</string>
    <string name="action_exits">退出</string>
    <string name="title_activity_main">AA生活记账</string>
    <string name="title_activity_day">每日消费</string>
    <string name="title_activity_day_detail">消费明细</string>
    <string name="title_activity_month">每月消费</string>
    <string name="title_activity_add">添加消费</string>
    <string name="title_activity_edit">编辑消费</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_register">用户注册</string>
    <string name="title_activity_category_edit">类别管理</string>
    <string name="title_activity_rank_cat_detail">分类明细</string>
    <string name="title_activity_rank_count_detail">次数明细</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_abouts">关于</string>
    <string name="title_activity_analyze_compare_detail">比较明细</string>
    <string name="title_activity_rank">消费排行</string>
    <string name="title_activity_analyze">消费分析</string>
    <string name="title_activity_user_edit">修改资料</string>
    <string name="txt_title_home">AA生活记账</string>
    <string name="txt_title_welcome">用户中心</string>
    <string name="txt_title_login">登录/注册</string>
    <string name="txt_title_useredit">修改</string>
    <string name="txt_title_total">消费统计</string>
    <string name="txt_title_add">添加</string>
    <string name="txt_title_back">返回</string>
    <string name="txt_title_date">日期</string>
    <string name="txt_title_search">搜索</string>
    <string name="txt_title_refresh">刷新</string>
    <string name="txt_tab_day">每日消费</string>
    <string name="txt_tab_day_detail">消费明细</string>
    <string name="txt_tab_month">每月消费</string>
    <string name="txt_tab_rank">消费排行</string>
    <string name="txt_tab_analyze">消费分析</string>
    <string name="txt_tab_analyzecompare">比较分析</string>
    <string name="txt_tab_analyzerecommend">推荐分析</string>
    <string name="txt_tab_analyzesearch">搜索分析</string>
    <string name="txt_tab_analyzetongji">趣味统计</string>
    <string name="txt_tab_add">添加消费</string>
    <string name="txt_tab_edit">编辑消费</string>
    <string name="txt_tab_login">用户登录</string>
    <string name="txt_tab_register">用户注册</string>
    <string name="txt_tab_catedit">类别管理</string>
    <string name="txt_tab_rankcat">分类排行</string>
    <string name="txt_tab_rankcount">次数排行</string>
    <string name="txt_tab_rankprice">单价排行</string>
    <string name="txt_tab_rankdate">日期排行</string>
    <string name="txt_tab_useredit">修改资料</string>
    <string name="txt_tab_rankcatdetail">分类明细</string>
    <string name="txt_tab_rankcountdetail">次数明细</string>
    <string name="txt_tab_analyzecomparedetail">比较明细</string>
    <string name="txt_tab_settings">设置</string>
    <string name="txt_tab_abouts">关于</string>
    <string name="txt_lab_username">用户名：</string>
    <string name="txt_lab_nickname">昵&#160;&#160;&#160;&#160;称：</string>
    <string name="txt_lab_status">同步状态：</string>
    <string name="txt_lab_qzone">分享到空间</string>
    <string name="txt_lab_qq">分享到QQ</string>
    <string name="txt_home_sync">同步</string>
    <string name="txt_home_syncat">同步于</string>
    <string name="txt_home_syncing">数据同步中&#8230;</string>
    <string name="txt_home_hassync">有未同步的数据。</string>
    <string name="txt_home_haswebsync">有未同步的网络数据。</string>
    <string name="txt_home_nosync">没有要同步的数据。</string>
    <string name="txt_home_loginsync">请登录后同步数据。</string>
    <string name="txt_home_loginsyncweb">请登录后同步网络数据。</string>
    <string name="txt_home_syncexit">数据同步中不能退出。</string>
    <string name="txt_home_syncerror">数据同步失败！请重试。</string>
    <string name="txt_home_neterror">没有打开网络连接！</string>
    <string name="txt_search_keyempty">搜索关键字不能为空。</string>
    <string name="txt_day_select">选择</string>
    <string name="txt_day_itemname">商品名称</string>
    <string name="txt_day_itemprice">价格</string>
    <string name="txt_day_recommend">推荐</string>
    <string name="txt_day_id">编号</string>
    <string name="txt_day_itembuydate">日期</string>
    <string name="txt_day_totalprice">总价格</string>
    <string name="txt_cat_id">编号</string>
    <string name="txt_cat_name">类别名称</string>
    <string name="txt_cat_operate">操作</string>
    <string name="txt_cat_save">保存</string>
    <string name="txt_month_id">编号</string>
    <string name="txt_month_date">日期</string>
    <string name="txt_month_price">总价格</string>
    <string name="txt_month_total">总计</string>
    <string name="txt_rank_id">排名</string>
    <string name="txt_rank_catname">类别名称</string>
    <string name="txt_rank_itemname">商品名称</string>
    <string name="txt_rank_itembuydate">日期</string>
    <string name="txt_rank_count">次数</string>
    <string name="txt_rank_price">总价格</string>
    <string name="txt_rank_itemprice">价格</string>
    <string name="txt_analyze_catid">编号</string>
    <string name="txt_analyze_catname">类别名称</string>
    <string name="txt_analyze_pricecur">当月总价</string>
    <string name="txt_analyze_priceprev">上月总价</string>
    <string name="txt_analyze_itembuydate">日期</string>
    <string name="txt_analyze_itemprice">价格</string>
    <string name="txt_analyze_countcur">当月</string>
    <string name="txt_analyze_countprev">上月</string>
    <string name="txt_analyze_itemname">商品名称</string>
    <string name="txt_total_label">今日</string>
    <string name="txt_total_price">消费金额</string>
    <string name="txt_day_nav_main">12&#8211;18&#160;&#160;三</string>
    <string name="txt_day_nav_left">12&#8211;17&#160;&#160;二</string>
    <string name="txt_day_nav_right">12&#8211;19&#160;&#160;四</string>
    <string name="txt_day_edit">编辑</string>
    <string name="txt_day_delete">删除</string>
    <string name="txt_day_deletesuccess">删除成功。</string>
    <string name="txt_day_deleteerror">删除失败！</string>
    <string name="txt_day_deleteuse">不能删除使用中的分类！</string>
    <string name="txt_month_nav_main">2013&#8211;12</string>
    <string name="txt_noitem">没有消费记录。</string>
    <string name="txt_nocategory">没有类别记录。</string>
    <string name="txt_add_id">编号</string>
    <string name="txt_add_name">名称</string>
    <string name="txt_add_region">固定</string>
    <string name="txt_add_reg_from">从</string>
    <string name="txt_add_reg_to">到</string>
    <string name="txt_add_regionerr">区间日期设置不合理，或太大了！</string>
    <string name="txt_add_cattype">商品类别</string>
    <string name="txt_add_itemname">商品名称</string>
    <string name="txt_add_itemprice">商品价格</string>
    <string name="txt_add_itembuydate">购买日期</string>
    <string name="txt_add_addback">添加返回</string>
    <string name="txt_add_addcontinue">添加继续</string>
    <string name="txt_add_adderror">添加失败！</string>
    <string name="txt_add_addsuccess">添加成功。</string>
    <string name="txt_add_smart">智\n能\n添\n加</string>
    <string name="txt_add_smartback">&lt;&lt;&#160;返回</string>
    <string name="txt_edit_editerror">编辑失败！</string>
    <string name="txt_edit_editsuccess">编辑成功。</string>
    <string name="txt_nonull">不能为空。</string>
    <string name="txt_empty">&#160;</string>
    <string name="txt_price">￥</string>
    <string name="txt_newversion">有新版本可以升级。\n</string>
    <string name="txt_isnewversion">您使用的是最新版本。</string>
    <string name="txt_newdowning">新版本下载中&#8230;</string>
    <string name="txt_updateerror">升级失败！</string>
    <string name="txt_user_username">用户名</string>
    <string name="txt_user_userpass">密&#160;&#160;&#160;&#160;码</string>
    <string name="txt_user_nickname">昵&#160;&#160;&#160;&#160;称&#160;&#160;</string>
    <string name="txt_user_email">邮&#160;&#160;&#160;&#160;箱&#160;&#160;</string>
    <string name="txt_user_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="txt_user_add">注&#160;&#160;&#160;&#160;册</string>
    <string name="txt_user_newuser">新用户</string>
    <string name="txt_user_edit">修&#160;&#160;&#160;&#160;改</string>
    <string name="txt_user_loginerror">登录失败！</string>
    <string name="txt_user_registererror">注册失败！</string>
    <string name="txt_user_loginsuccess">登录成功。</string>
    <string name="txt_user_registersuccess">注册成功，请登录。</string>
    <string name="txt_user_editerror">资料修改失败！</string>
    <string name="txt_user_editsuccess">资料修改成功。</string>
    <string name="txt_user_loginnote">提示：用户注册请点击右上角。</string>
    <string name="txt_user_userrepeat">用户名重复！</string>
    <string name="txt_user_userimage">头像</string>
    <string name="txt_user_imagesuccess">头像更新成功。</string>
    <string name="txt_user_imageerror">头像更新失败！</string>
    <string name="txt_user_emailerror">邮箱格式错误！</string>
    <string name="txt_tips">提示</string>
    <string name="txt_sure">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_yes">是</string>
    <string name="txt_no">否</string>
    <string name="txt_about_email">写给作者</string>
    <string name="txt_about_text">爱生活，爱记账，AA生活记账\n\nwww.fxlweb.com\n\n个人开发者</string>
    <string name="txt_about_emailtxt">如果您喜欢AA生活记账，请在此写上您的鼓励和祝福，谢谢！遇到问题，请联系作者。QQ：67936108</string>
    <string name="txt_about_emailsuccess">谢谢支持，祝您愉快。</string>
    <string name="txt_about_emailerror">出错了！请重试。</string>
    <string name="txt_about_notlogin">请您先登录！</string>
    <string name="txt_about_empty">内容不能少于十个字！</string>
    <string name="txt_about_texthint">请填写十字以上文明用词</string>
    <string name="txt_set_lockempty">未设置</string>
    <string name="txt_set_lock">登录密锁</string>
    <string name="txt_set_welcome">欢迎文字</string>
    <string name="txt_set_sync">数据同步</string>
    <string name="txt_set_synctext">启动时同步所有数据？</string>
    <string name="txt_set_update">更新版本</string>
    <string name="txt_set_updatetext">允许2g网络下更新版本？</string>
    <string name="txt_set_clock">闹钟提醒</string>
    <string name="txt_set_clocktext">点击设置提醒记账的闹钟。</string>
    <string name="txt_set_clockerror">打开系统闹钟失败，请手动设置！</string>
    <string name="txt_restore">是否恢复备份数据？\n</string>
    <string name="txt_lock">请输入密匙</string>
    <string name="txt_lock_error">密匙不正确</string>
    <string name="txt_lock_go">设置</string>
    <string name="txt_lock_sure">确&#160;&#160;&#160;&#160;定</string>
    <string name="txt_egg">彩蛋</string>     
    <string name="txt_eggtext">作者的宝宝将于2014年11月出生。如果是男孩就叫蛋蛋，是女孩就叫笑笑。\n\n祝愿宝宝健康成长！加油！\n</string>
    <string name="txt_calculator">计算器</string>
    <string name="txt_calcfirst">请先计算结果。</string>
    <string name="txt_calc_0">0</string>
    <string name="txt_calc_1">1</string>
    <string name="txt_calc_2">2</string>
    <string name="txt_calc_3">3</string>
    <string name="txt_calc_4">4</string>
    <string name="txt_calc_5">5</string>
    <string name="txt_calc_6">6</string>
    <string name="txt_calc_7">7</string>
    <string name="txt_calc_8">8</string>
    <string name="txt_calc_9">9</string>
    <string name="txt_calc_ok">√</string>
    <string name="txt_calc_jia">+</string>
    <string name="txt_calc_jian">-</string>
    <string name="txt_calc_chen">×</string>
    <string name="txt_calc_chu">÷</string>
    <string name="txt_calc_den">=</string>
    <string name="txt_calc_dian">.</string>
    <string name="txt_calc_clear">c</string>
    <string name="txt_calc_back">←</string>

</resources>
