<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_empty" />

        <TextView
            android:id="@+id/textView1"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/txt_title_home" />

        <ImageButton
            android:id="@+id/btn_title_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/title_btn_selector"
            android:contentDescription="@string/txt_title_add"
            android:src="@drawable/ic_title_add" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout4"
        style="@style/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:background="@drawable/nav_border_sub" >

        <TextView
            android:id="@+id/tv_title_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/ic_title_welcome"
            android:gravity="center"
            android:text="@string/txt_title_welcome" />

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:drawableRight="@drawable/ic_title_login"
            android:gravity="center"
            android:text="@string/txt_title_login"
            android:textColor="@drawable/nav_btn_selector" />

        <TextView
            android:id="@+id/tv_title_useredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:drawableRight="@drawable/ic_title_edit"
            android:gravity="center"
            android:text="@string/txt_title_useredit"
            android:textColor="@drawable/nav_btn_selector"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout4"
        android:background="@color/color_item_bg"
        android:padding="@dimen/padding_medium" >

        <ImageView
            android:id="@+id/iv_userimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginLeft="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:contentDescription="@string/txt_user_userimage"
            android:src="@drawable/ic_user" />

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_userimage"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_lab_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                android:text="@string/txt_lab_username" />

            <TextView
                android:id="@+id/tv_lab_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_medium"
                android:text="@string/txt_lab_nickname" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout2"
        android:background="@color/color_item_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_lab_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/txt_lab_status"
            android:textColor="@color/color_main" />

        <ImageButton
            android:id="@+id/btn_home_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_lab_status"
            android:background="@android:color/transparent"
            android:contentDescription="@string/txt_home_sync"
            android:src="@drawable/ic_home_sync"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/pb_home_sync"
            android:layout_width="@dimen/height_medium"
            android:layout_height="@dimen/height_medium"
            android:layout_toRightOf="@+id/tv_lab_status"
            android:background="@color/color_item_bg"
            android:indeterminateDrawable="@drawable/sync_bg"
            android:indeterminateOnly="true"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_line_height"
        android:layout_below="@+id/RelativeLayout1"
        android:background="@color/color_title_bg"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout3"
        style="@style/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout6"
        android:background="@drawable/nav_border_sub" >

        <TextView
            android:id="@+id/tv_title_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/ic_title_home"
            android:gravity="center"
            android:text="@string/txt_title_total" />

        <TextView
            android:id="@+id/tv_date_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:drawableRight="@drawable/ic_date_choose"
            android:gravity="center"
            android:text="@string/txt_day_nav_main"
            android:textColor="@drawable/nav_btn_selector" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout3"
        android:background="@android:color/white"
        android:listSelector="@android:color/transparent" >

    </ListView>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab_bg" >

        <ImageButton
            android:id="@+id/btn_tab_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/title_btn_selector"
            android:contentDescription="@string/txt_tab_day"
            android:src="@drawable/ic_tab_day" />

        <ImageButton
            android:id="@+id/btn_tab_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/title_btn_selector"
            android:contentDescription="@string/txt_tab_month"
            android:src="@drawable/ic_tab_month" />

        <ImageButton
            android:id="@+id/btn_tab_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/title_btn_selector"
            android:contentDescription="@string/txt_tab_rank"
            android:src="@drawable/ic_tab_rank" />

        <ImageButton
            android:id="@+id/btn_tab_analyze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/title_btn_selector"
            android:contentDescription="@string/txt_tab_analyze"
            android:src="@drawable/ic_tab_analyze" />
    </LinearLayout>

</RelativeLayout>