<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_rank_itemname"
        style="@style/tv_item"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/item_bg"
        android:gravity="center"
        android:text="@string/txt_rank_itemname" />

    <TextView
        android:id="@+id/tv_rank_itembuydate"
        style="@style/tv_item"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/item_bg"
        android:gravity="center"
        android:text="@string/txt_rank_itembuydate" />

    <TextView
        android:id="@+id/tv_rank_itemprice"
        style="@style/tv_item_price"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:background="@color/item_bg"
        android:gravity="right|center"
        android:text="@string/txt_rank_itemprice" />

</LinearLayout>
